@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.1.9
 
+	- Fixed regression in callback handling (STR #1918)
 	- Fixed wrong relative path when absolute path has a 
 	  trailing slash in fl_filename_relative (STR #1920)
 	- Fixed multiple selction of files and directories in
